fixed title overflow

--- a/src/Styles/entrycard.scss
+++ b/src/Styles/entrycard.scss
@@ -28,6 +28,16 @@
     }
 }
 
+.title{
+    color:#29335C;
+    font-weight: bold;
+    display: -webkit-box;
+    max-width: 200px;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 
 .inner-card-controls{
     display: flex;
